# xgpu

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bun.lockb  codegen.sh  package.json  pyproject.toml  testo.py  triangle.py
.github/workflows/: pulls.yml  wheels.yml
codegen/: extract_docs.ts  fetch_wgpu_bins.py  fetch_wgpu_bins.ts  generate.t  generate.ts  llm_doc_comments.ts  parse_vk_formats.ts  patches.ts  pygen.ts  stringmanip.ts  vkformats.txt  wgpu_extra.h
docker/: fetch-native.py  wgpu_native.json
examples/: adapter_info.py  adapter_info_wgpu.py  example_utils.py  glfw_window.py  imgui_example.py  imgui_renderer.py  layout_utils.py  matcap.py  perftest_numbers.txt  perftest_wgpu.py  perftest_xgpu.py  perftest_xgpu_bindbuilder.py  renderdoc.py  textured_cube.py  triangle_offscreen.py  triangle_offscreen_renderdoc.py  triangle_windowed.py  trimesh_helpers.py
examples/assets/: licenses.txt  stone_window_256.ktx2
examples/scratch/shaders/: rs_basic.wgsl  rs_pbr_basic.wgsl  rs_pbr_ibl.wgsl
examples/tests/: harness.py  run_tests.py  test_cubes.py  test_triangle.py
packaging/: Dockerfile  README.md  fetch-native.py  pyproject.toml  setup.py  wgpu_native.json
webgoo/: _build_ext.py  bindings.py  conveniences.py
xgpu/: __init__.py  bindings.py  conveniences.py  extensions.py  helpers.py  renderdoc.py  textureformats.py
xgpu/extensions/: __init__.py  glfw_window.py  helpers.py  imgui_renderer.py  ktx.py  standardimage.py  texloader.py  vkformats.py  wrappers.py
xgpu/include/: FORCE_THIS_DIRECTORY_TO_EXIST.txt
