[build-system]
requires = ["setuptools>=61.2", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "webgoo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["cffi"]

[project.license]
text = "proprietary"

[project.urls]
Homepage = "https://github.com/pyrym/webgoopy"

[tool.setuptools]
include-package-data = true
packages = [
   "webgoo",
]
[tool.setuptools.package-data]
webgoo = [
    "*.so"
]

[tool.ruff]
target-version = "py311"
# See https://github.com/charliermarsh/ruff#rules for error code definitions.
select = [
    # "ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "RUF100", # meta
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
ignore = [
  "C901", # Comprehension is too complex (11 > 10)
  "N802", # Function name should be lowercase
  "N806", # Variable in function should be lowercase
  "E501", # Line too long ({width} > {limit} characters)
  "B904", # raise ... from err
  "B905", # zip() without an explicit strict= parameter
  "ANN101", # type hint for `self`
  "ANN002", # type hint for *args
  "ANN003", # type hint for **kwargs
  "UP007", # uses `|` instead of `Optional`
    "UP038", # uses `|` instead of `tuple`	
]
line-length = 90

[tool.cibuildwheel]
# wgpu-native does not build with older manylinux
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-build = "pip install cffi && cd webgoo && rm _wgpu_native_cffi* | true && python wgpu_native_build.py && ls -altrsh && patchelf --set-rpath '$ORIGIN'/ _wgpu_native_cffi.*.so && ls -altrsh && ldd _wgpu_native_cffi.*.so"

#CIBW_BUILD_VERBOSITY