[build-system]
requires = ["setuptools>=61.2", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "xgpu"
version = "0.6.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["cffi"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyrym/xgpu"

[tool.setuptools]
include-package-data = true
packages = [
   "xgpu",
]
[tool.setuptools.package-data]
xgpu = [
    "*.so",
    "*.dll",
    "*.pyd",
    "*.dylib"
]

[tool.ruff]
target-version = "py37"
respect-gitignore = false
# See https://github.com/charliermarsh/ruff#rules for error code definitions.
select = [
    # "ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "RUF100", # meta
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
ignore = [
    "F403", # unable to detect undefined names with import *
    "C901", # Comprehension is too complex (11 > 10)
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "E501", # Line too long ({width} > {limit} characters)
    "B904", # raise ... from err
    "B905", # zip() without an explicit strict= parameter
    "ANN101", # type hint for `self`
    "ANN002", # type hint for *args
    "ANN003", # type hint for **kwargs
    "UP007", # uses `|` instead of `Optional`
    "UP038", # uses `|` instead of `tuple`	
]
line-length = 90

[tool.cibuildwheel]
# wgpu-native does not build with older manylinux
manylinux-x86_64-image = "manylinux_2_28"
before-build = "pip install cffi && cd xgpu && python _build_ext.py"

# Skip 32-bit builds, musl, etc
skip = ["*-win32", "*-manylinux_i686", "*musl*"]

# just make sure the library imports for now
test-command = 'python -c "import xgpu"'

[tool.cibuildwheel.macos]
archs = ["universal2"]
skip = ["cp36-*", "cp37-*", "pp*"]
