[build-system]
requires = ["setuptools>=61.2", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "xgpu"
version = "0.9.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["cffi"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyrym/xgpu"

[project.optional-dependencies]

# includes windowing libraries
gui = [
    "glfw", "imgui"
    ]

[tool.setuptools]
include-package-data = true
packages = [
   "xgpu",
   "xgpu.extensions",
]
[tool.setuptools.package-data]
xgpu = [
    "*.so",
    "*.dll",
    "*.pyd",
    "*.dylib",
    "extensions/assets/*"
]



[tool.ruff]
target-version = "py37"
respect-gitignore = false
line-length = 90

[tool.ruff.lint]
select = [
    "ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "RUF100", # meta
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
# See https://github.com/charliermarsh/ruff#rules for error code definitions.
ignore = [
    "F403", # unable to detect undefined names with import *
    "E501", # Line too long ({width} > {limit} characters)
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN401",
]

[tool.cibuildwheel]
# wgpu-native does not build with older manylinux
manylinux-x86_64-image = "manylinux_2_28"
before-build = "pip install cffi && cd xgpu && python _build_ext.py"

# Skip 32-bit builds, musl, etc
skip = ["*-win32", "*-manylinux_i686", "*musl*"]

# just make sure the library imports for now
test-command = 'python -c "import xgpu"'

[tool.cibuildwheel.macos]
archs = ["universal2"]
skip = ["cp36-*", "cp37-*", "pp*"]
